[package]
authors = ["ustulation <ustulation@gmail.com>"]
description = "Prune dependency cache"
license = "GPL-3.0"
name = "cargo-prune"
readme = "README.md"
repository = "https://github.com/ustulation/cargo-prune"
version = "0.1.8"
edition = "2024"

[dependencies]
docopt = "1"
serde = { version = "1", features = ["serde_derive"] }
unwrap = "~1.1.0"
